server - client ; scoreboard and more